[workspace]
members = [
  "greet",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Hackworth Ltd <src@hackworthltd.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hackworthltd/nix-rust-wasm-npm"
description = "A boring package used to test Nix, Rust, Wasm, and npm integration."
readme = "README.md"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
