[package]
name = "greet"
version = "0.1.0"
authors = ["Hackworth Ltd <src@hackworthltd.com>"]
edition = "2021"
license = "0BSD"
repository = "https://github.com/hackworthltd/nix-rust-wasm-npm"
description = "A boring package used to test Nix, Rust, Wasm, and npm integration."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
